fixed input and text area visibility

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -31,11 +31,13 @@
 .contact-form input {
   padding: 0.5rem;
   font-family: "Montserrat", sans-serif;
+  border: 2px solid;
 }
 
 .contact-form textarea {
   font-family: "Montserrat", sans-serif;
   padding: 0.5rem;
+  border: 2px solid;
 }
 
 .contact-form button {
